************************************************************************
date Version 3.00.53
* Fixed missing C++ code generation for menu separators and menu item bitmaps.
* FS#290 - "Toolbarseparator leads to crash if the Bitmapsize differs from default."
^ Improved refresh of selection inside a scrolled window.
* Fixed crash on xrc generation for empty bitmap properties.

12/17/2007 Version 3.00.52 (RC4-1)
* Fixed application closing when double clicking on an .fpb file in Windows.
* FS#288 - [OS X] Splash screen is truncated
* FS#287 - Made wxFormBuilder compile on systems where wxStackWalker is not present
* FS#289 - [OS X] Perform file associations on mac

12/14/2007 Version 3.00.51 (RC4)
^ No longer creating a temporary file on disk for the XRC Preview.
* FS#247 - "Invalid macro generated by wxFB."
* FS#248 - "Property choices of wxChoice: Strings with single quotes are truncated"
  This forced incrementing the .fbp version to 1.9
* FS#249 - "Paste From Clipboard requires Administrator privileges on Vista"
* FS#252 - "OnSize event bug in RC3 for wxPanel."
* FS#250 - "Image File Browser default filter should be "All Image Files""
* FS#251 - "UNC paths for images are not supported."
* FS#254 - "code duplicating."
+ FS#257 - "wxStaticBox inside a wxStaticBoxSizer lacks an id"
* FS#261 - "wxMenuItem has no 'permission' property"
* FS#265 - "wxID_PREFERENCES should not be redefined"
* FS#269 - "[OS X] menu items shown at wrong place in menu bar" (patch from Auria)
* FS#263 - "Frame not resized correctly in designer when menubar/toolbar/statusbar present"
* FS#267 - "[OS X] radio button groups cause crash"
* FS#276 - "Creation of two event handlers with different protoypes" (patch from Joel Low)
* FS#279 - "missing Append() for wxMenuItem" (patch from denk_mal)
* FS#262 - "Centering of Frame/Dialog incorrect when frame/dialog size not pre-defined"
* FS#258 - "wxRadioButton enabled value not respected" (patch from Joel Low)